[package]
name = "startt"
version = "0.1.10"
edition = "2024"
authors = ["David Horner"]
description = "Automate detection of HWND and real PID for apps launched through ShellExecuteEx (cmd start, Explorer, PowerShell)"
license = "MIT"
repository = "https://github.com/davehorner/startt"
homepage = "https://github.com/davehorner/startt"
documentation = "https://docs.rs/startt"
readme = "README.md"
keywords = ["windows", "cli", "hwnd", "shell", "shellexecute"]
categories = ["command-line-utilities"]

[dependencies]
ctrlc = "3.4.7"
ferrisetw = { version = "1.2.0", optional = true }
is-admin = "0.1.2"
rand = "0.9.1"
# uiautomation = { version = "0.18.4", optional = true }
widestring = "1.2.0"
winapi = { version = "0.3.9", features = [
  "synchapi",
  "processenv",
  "handleapi",
  "libloaderapi",
  "psapi",
  "shellapi",
  "tlhelp32",
  "winbase",
  "winuser",
] }
winreg = "0.55.0"

[features]
default = []
# uses_uiautomation = ["dep:uiautomation"]
uses_etw = ["dep:ferrisetw"]
