[package]
name = "startt"
version = "0.1.18"
edition = "2024"
authors = ["David Horner"]
description = "Automate detection of HWND and real PID for apps launched through ShellExecuteEx (cmd start, Explorer, PowerShell)"
license = "MIT"
repository = "https://github.com/davehorner/startt"
homepage = "https://github.com/davehorner/startt"
documentation = "https://docs.rs/startt"
readme = "README.md"
keywords = ["windows", "cli", "hwnd", "shell", "shellexecute"]
categories = ["command-line-utilities"]

[dependencies]
ctrlc = "3.4.7"
dashmap = "6.1.0"
eframe = {version="0.31.1",features=["persistence","serde"]}
egui = { version= "0.31.1",features=["persistence","serde","log"]}
ferrisetw = { version = "1.2.0", optional = true }
# iceoryx2 = "0.6.1"
is-admin = "0.1.2"
once_cell = "1.21.3"
rand = "0.9.1"
rfd = "0.14"
tts = "0.26.3"
uiautomation = { version = "0.19.2", features = ["event"] }
widestring = "1.2.0"
winapi = { version = "0.3.9", features = [
  "consoleapi",
  "synchapi",
  "processenv",
  "handleapi",
  "libloaderapi",
  "psapi",
  "shellapi",
  "tlhelp32",
  "winbase",
  "winuser",
  "wincon",
  "memoryapi",
] }
winreg = "0.55.0"
windows-core = "0.61.0"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
serde_json = "1.0.140"

[dependencies.windows]
version = "0.61.1"
features = [
    # "implement",
    "UI_UIAutomation",
    "Win32_UI_Accessibility",
]

[features]
default = []
# uses_uiautomation = ["dep:uiautomation"]
uses_etw = ["dep:ferrisetw"]
[build-dependencies]
chrono = "0.4.41"
